scroll fix on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,6 +4,7 @@ html, body {
   padding: 0;
   margin: 0;
   overflow: hidden;
+  position: fixed;
 }
 
 .shuffleboard {
@@ -24,7 +25,7 @@ html, body {
 
 .reset-button {
   position: absolute;
-  bottom: 1rem;
+  bottom: 14vh;
   left: calc(50% - 50px);
   font-size: 1rem;
   padding: 1rem 0;
